remove deprecated things from the tags presenter; fix clipping on tags show page

--- a/app/assets/stylesheets/new_styles/_tags.scss
+++ b/app/assets/stylesheets/new_styles/_tags.scss
@@ -1,8 +1,8 @@
 #tag-info {
   #tag-leaders{
-    margin-bottom:50px;
-    white-space: nowrap;
     overflow:hidden;
+    max-height: 155px;
+    margin-bottom:50px;
 
     .leader {
       position:relative;
